# device-backup-intership

./: .gitignore  Dockerfile  pyproject.toml  readme.md
src/: __init__.py  __main__.py  app.py  app_config.py  test.db
src/entities/backup/: controller.py  exception.py  model.py  repository.py  service.py
tests/: conftest.py  test_backup_controller.py
