[tool.poetry]
name = "back"
version = "0.1.0"
description = ""
authors = ["AlexProtchenko <ialexprotchenko@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.23"
Flask = "^2.0.1"
PyMySQL = "^1.0.2"
python-dotenv = "^0.19.0"
pytest = "^6.2.5"
pytest-dotenv = "^0.5.2"
requests = "^2.26.0"
pyTelegramBotAPI = "^4.0.1"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
